
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int putchar (int ) ;

int
puts(const char* string)
{
    while (*string) putchar(*string++);
    return 0;
}
